@@ -10,7 +10,7 @@ public enum ParameterKeys implements IParameterKey {
     isPlaying,
 
     //For system:
-    time, name, version, project, flavor, locale, distributionTag, javaVersion, osName, osVersion, parserVersion, study, id, machineCookie, messageCount, messageIndex, shouldReset, sessionId,
+    time, name, version, project, flavor, locale, distributionTag, javaVersion, osName, osVersion, parserVersion, study, id, machineCookie, messageCount, messageIndex, sessionId,
 
     errorMessage,
     //For drag events
@@ -18,5 +18,7 @@ public enum ParameterKeys implements IParameterKey {
 
     correctedValue,
     ipAddress,
-    mountainTime
+    mountainTime,
+    errorType,
+    commitAction
 }
