@@ -8,5 +8,5 @@ package edu.colorado.phet.common.phetcommon.simsharing.messages;
  */
 public enum UserActions implements IUserAction, ISystemAction {
     activated, changed, closed, deactivated, deiconified, drag, endDrag, iconified, moved, pressed, released, resized, startDrag, windowClosing, popupTriggered,
-    invalidInput, focusLostInvalidInput, focusLost, pressedKey, selected
+    focusLost, selected, textFieldCommitted, textFieldCorrected
 }
