@@ -1,3 +1,4 @@
+1/17/12 add start/EndDrag messages to SimSharingLogarithmicValueControl, cleanup and simplify the sim-sharing hooks in AbstractValueControl
 1/17/12 use HALF_UP (nearest neighbor) rounding in DefaultDecimalFormat
 1/12/12 Simsharing: Added IP address lookup
 1/12/11 SimSharing: #3216, support customization of Swing drag listeners via both subclassing and mutation
